[gd_scene load_steps=5 format=3 uid="uid://n40lhf8hm7o1"]

[ext_resource type="Script" path="res://src/Tools/BaseShapeDrawer.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ubyatap3sylf" path="res://src/Tools/BaseDraw.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://yjhp0ssng2mp" path="res://src/UI/Nodes/ValueSlider.tscn" id="3"]

[sub_resource type="ButtonGroup" id="ButtonGroup_7w1wt"]
resource_name = "rotate"
allow_unpress = true

[node name="ToolOptions" instance=ExtResource("2")]
script = ExtResource("1")

[node name="ThicknessSlider" parent="." index="2" instance=ExtResource("3")]
layout_mode = 2
min_value = 1.0
value = 1.0
prefix = "Size:"
suffix = "px"
global_increment_action = "brush_size_increment"
global_decrement_action = "brush_size_decrement"

[node name="FillCheckbox" type="CheckBox" parent="." index="3"]
layout_mode = 2
tooltip_text = "Fills the drawn shape with color, instead of drawing a hollow shape"
mouse_default_cursor_shape = 2
text = "Fill Shape"

[node name="Rotate90" parent="RotationOptions/GridContainer/Rotate" index="0"]
button_group = SubResource("ButtonGroup_7w1wt")

[node name="Rotate180" parent="RotationOptions/GridContainer/Rotate" index="1"]
button_group = SubResource("ButtonGroup_7w1wt")

[node name="Rotate270" parent="RotationOptions/GridContainer/Rotate" index="2"]
button_group = SubResource("ButtonGroup_7w1wt")

[node name="Brush" parent="." index="5"]
visible = false

[connection signal="value_changed" from="ThicknessSlider" to="." method="_on_Thickness_value_changed"]
[connection signal="toggled" from="FillCheckbox" to="." method="_on_FillCheckbox_toggled"]
